--- a/MenorAuto/index.html
+++ b/MenorAuto/index.html
@@ -28,7 +28,7 @@
         <p>deu ruim? coloca o GPS!</p>
         <h1>Vem pra Menor Preço!</h1>
         <p>Funcionamento</p> 
-        de segunda á sexta
+        <p>de segunda á sexta</p>
     </main>
 
 
