--- a/MenorAuto/index.html
+++ b/MenorAuto/index.html
@@ -11,10 +11,6 @@
     
 <!-- Header -->
     <header>
-            <div class="logo">
-                <div class="img">
-                    <img src="" alt="">
-                </div>
             </div>
             <nav class="actions">
                 <a href="">Produtos</a>
@@ -22,9 +18,9 @@
                 <a href="">Contato</a>
             </nav>
     </header>
-
 <!-- Main -->
     <main>
+        <div><img class="mainicon" src="img/logo1.png" alt=""></div>
         <p>deu ruim? coloca o GPS!</p>
         <h1>Vem pra Menor Preço!</h1>
         <p>Funcionamento</p> 
