--- a/MenorAuto/index.html
+++ b/MenorAuto/index.html
@@ -22,7 +22,8 @@
                 <a href="">Suporte</a>
                 <a href="">Contato</a>
             </nav>
-            <div class="menu"></div>
+            <label for="menu-toggle"><img src="images/menu-aberto.png" alt=""></label>
+            <input type="checkbox" id="menu-toggle">
         </header>
         <!-- Main -->
         <main>
