--- a/MenorAuto/index.html
+++ b/MenorAuto/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MenorAutoPeças</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu" />
 </head>
 
 <body>
@@ -15,14 +16,18 @@
         <!-- Header -->
         <header class="header">
             <div class="logo">
-                <img id="logo-site" class="mainicon" src="images/MenorAutoPreço.png" alt="">
+                <img id="logo-site" class="mainicon" src="images/Menor_Preço-logo.png" alt="">
             </div>
+
+            <span class="material-symbols-outlined">
+                menu
+            </span>
+
             <nav class="actions">
                 <a href="">Produtos</a>
                 <a href="">Suporte</a>
                 <a href="">Contato</a>
             </nav>
-            <div class="menu"></div>
         </header>
         <!-- Main -->
         <main>
@@ -30,6 +35,8 @@
                 <h1 class="textos">SOLUÇÕES COMPLETAS PARA O MOTOR</h1>
                 <h1 id="texto-especial" class="textos">ACELERE COM DESEMPENHO E SEGURANÇA.</h1>
             </div>
+
+            <img id="imagem-logo-bg" src="images/MenorAutoPreço-logou.png" alt="">
 
             <div class="main-text">
                 Está buscando peças confiáveis para seu motor? Chegou ao lugar certo.
