--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <img id="logo-site" class="mainicon" src="images/Menor_Preço-logo.png" alt="">
             </div>
 
-            <span class="material-symbols-outlined">
+            <span class="material-symbols-outlined icon-large">
                 menu
             </span>
 
@@ -36,13 +36,22 @@
                 <h1 id="texto-especial" class="textos">ACELERE COM DESEMPENHO E SEGURANÇA.</h1>
             </div>
 
-            <img id="imagem-logo-bg" src="images/MenorAutoPreço-logou.png" alt="">
+            <img id="img-mecanico" src="images/img-mecanico.png" alt="imagem de um mecânico">
 
             <div class="main-text">
-                Está buscando peças confiáveis para seu motor? Chegou ao lugar certo.
-                A Menor Peças entrega qualidade, durabilidade e o melhor custo-benefício para o seu veículo.
-                Com foco em inovação e excelência, garantimos que cada componente atenda os mais altos padrões de
-                exigência.
+                <p>
+                    Está buscando peças confiáveis para seu motor?
+                    Você chegou ao lugar certo!
+                    <br><br>
+                    A Menor Preços entrega qualidade, durabilidade e o melhor custo-benefício para o seu veículo. <br><br>
+                    Com foco em inovação e excelência, garantimos que cada componente atenda os mais altos padrões de
+                    exigência.
+                </p>
+            </div>
+
+            <div class="localizacao">
+                <h2 id="h2-locale">Venha nos fazer uma visita!</h2>
+                <iframe id="iframe-maps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d248880.7045154514!2d-38.72154811328123!3d-12.923076299999991!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x71611b17f6c83ff%3A0x2148f96e49faa627!2sMenor%20Pre%C3%A7o%20Auto%20Pe%C3%A7as%20-%20Via%20Regional!5e0!3m2!1spt-BR!2sbr!4v1745465805549!5m2!1spt-BR!2sbr" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
 
             <div class="botoes-categorias">
@@ -73,9 +82,9 @@
                     <a href="#">Produtos</a>
                     <a href="#">Termo de uso de dados</a>
                     <a href="#">Funcionamento
-                        <a href="#">Políticas Internas
-                            <a href="#">Contato e localização</a>
-                            <a href="#">Suporte</a>
+                    <a href="#">Políticas Internas
+                    <a href="#">Contato e localização</a>
+                    <a href="#">Suporte</a>
                 </div>
 
             </div>
