--- a/index.html
+++ b/index.html
@@ -54,17 +54,18 @@
                 <iframe id="iframe-maps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d248880.7045154514!2d-38.72154811328123!3d-12.923076299999991!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x71611b17f6c83ff%3A0x2148f96e49faa627!2sMenor%20Pre%C3%A7o%20Auto%20Pe%C3%A7as%20-%20Via%20Regional!5e0!3m2!1spt-BR!2sbr!4v1745465805549!5m2!1spt-BR!2sbr" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
 
-            <div class="botoes-categorias">
-                <button class="button-category">
-                    <img src="images/engrenagem.png" alt="">
-                </button>
-
-                <button class="button-category">
-                    <img src="images/mecanico.png" alt="">
-                </button>
-            </div>
-
             
+            <fieldset class="form-cadastro">
+                <h2>Cadastro/login</h2>
+                <form action="">
+                    <label for="nome">Nome completo:</label>
+                    <input type="text" name="nome" id="nome-in" placeholder="  Ex: Marcelo Santos Silva">
+                    <label for="email">E-mail:</label>
+                    <input type="email" name="email" id="user-email-in" placeholder="  Seu melhor E-mail">
+                </form>
+            </fieldset>
+            
+
         </main>
 
 
@@ -72,19 +73,20 @@
         <footer>
             <div class="icons-social">
 
-                <div class="redesocial">
-                    <img src="images/instagram-icon.png" alt="ícone logo instagram">
-                    <img src="images/whatsapp_-icon.png" alt="ícone logo whatsapp">
-                </div>
-
                 <div class="info-footer">
                     <a href="#">Institucional</a>
                     <a href="#">Produtos</a>
-                    <a href="#">Termo de uso de dados</a>
-                    <a href="#">Funcionamento
-                    <a href="#">Políticas Internas
-                    <a href="#">Contato e localização</a>
+                    <a href="#">Política de privacidade</a>
                     <a href="#">Suporte</a>
+                </div>
+
+                <div class="formas-de-pagamento">
+                    <img id="img-bandeira-cartoes" src="images/bandeira-de-cartoes.png" alt="Imagem com a bandeira de cartões que são aceitos">
+                </div>
+
+                <div class="redesocial">
+                    <img src="images/instagram-icon.png" alt="ícone logo instagram">
+                    <img src="images/whatsapp_-icon.png" alt="ícone logo whatsapp">
                 </div>
 
             </div>
