--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>MenorAutoPeças</title>
     <link rel="stylesheet" href="index.css">
     <link rel="shortcut icon" href="images/icone-empresa.ico" type="image/x-icon">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 </head>
 
 <body>
@@ -21,14 +21,16 @@
                 <img id="logo-site" class="mainicon" src="images/Menor_Preço-logo.png" alt="">
             </div>
 
-            <span class="material-symbols-outlined icon-large">
-                menu
-            </span>
+            <div class="menu-toggle">
+                <i id="menu-icon" class="fas fa-bars"></i>
+            </div>
 
-            <nav class="actions">
-                <a href="">Produtos</a>
-                <a href="">Suporte</a>
-                <a href="">Contato</a>
+            <nav class="menu">
+                <ul class="opcoes">                    
+                    <a href="produtos.html"><li>Produtos</li></a>
+                    <a href="suporte.html"><li>Suporte</li></a>
+                    <a href="#contato"><li>Contato</li></a>
+                </ul>
             </nav>
 
         </header>
@@ -102,7 +104,7 @@
                 </div>
 
                 <h3>Fale Conosco</h3>
-                <div class="redesocial">
+                <div id="contato" class="redesocial">
                     <img src="images/instagram-icon.png" alt="ícone logo instagram">
                     <img src="images/whatsapp_-icon.png" alt="ícone logo whatsapp">
                 </div>
