Mudança de rede social

--- a/index.html
+++ b/index.html
@@ -105,8 +105,12 @@
 
                 <h3>Fale Conosco</h3>
                 <div id="contato" class="redesocial">
-                    <img src="images/instagram-icon.png" alt="ícone logo instagram">
-                    <img src="images/whatsapp_-icon.png" alt="ícone logo whatsapp">
+                    <div class="redesocial-icon">
+                        <img src="images/instagram-icon.png" alt="ícone logo instagram">
+                    </div>
+                    <div>
+                        <img src="images/whatsapp_-icon.png" alt="ícone logo whatsapp">
+                    </div>
                 </div>
 
             </div>
