--- a/politica.html
+++ b/politica.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <button id="botao-voltar-para-main"><a href="index.html" target="_self">voltar</a></button>
+    <button id="botao-voltar-para-main"><a href="index.html" target="_self">VOLTAR</a></button>
 
     <h1>Política de Uso de Dados</h1>
 
