--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 </p>
 
             </div>
-
+    <div class="local-form">
             <div class="localizacao">
 
                 <h2 id="h2-locale">
@@ -80,6 +80,7 @@
                 </form>
 
             </fieldset>
+    </div>
             
 
         </main>
