att- summat-DeskTop1.4

--- a/index.html
+++ b/index.html
@@ -27,10 +27,12 @@
 
             <nav class="actions">
                 <a href="">Produtos</a>
-                <a href="">Suporte</a>
+                <a href="#ultimo-a">Suporte</a>
                 <a href="">Contato</a>
             </nav>
-            <button class="MudarModo">Modo Escuro/Claro</button>
+            
+                <button class="MudarModo">Modo Escuro/Claro</button>
+          
 
         </header>
         <!-- Main -->
@@ -92,10 +94,10 @@
             <div class="icons-social">
 
                 <div class="info-footer">
-                    <a href="institucional.html" target="_blank">Institucional</a>
-                    <a href="produtos.html" target="_blank">Produtos</a>
-                    <a href="politica.html" target="_blank">Política de privacidade</a>
-                    <a id="ultimo-a" href="suporte.html" target="_blank">Suporte</a>
+                    <a href="institucional.html" target="_self">Institucional</a>
+                    <a href="produtos.html" target="_self">Produtos</a>
+                    <a href="politica.html" target="_self">Política de privacidade</a>
+                    <a id="ultimo-a" href="suporte.html" target="_self">Suporte</a>
                 </div>
 
                 <div class="formas-de-pagamento">
