--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
             <nav class="actions">
                 <a href="">Produtos</a>
-                <a href="">Suporte</a>
+                <a href="#ultimo-a">Suporte</a>
                 <a href="">Contato</a>
             </nav>
             <button class="MudarModo">Modo Escuro/Claro</button>
@@ -71,7 +71,7 @@
 
                 <h2>Cadastro/login</h2>
 
-                <form action="">
+                <form method="post" action="">
                     <label for="nome">Nome completo:</label>
                     <input type="text" name="nome" id="nome-in" placeholder="  Ex: Marcelo Santos Silva" required>
                     <label for="email">E-mail:</label>
@@ -92,10 +92,10 @@
             <div class="icons-social">
 
                 <div class="info-footer">
-                    <a href="institucional.html" target="_blank">Institucional</a>
-                    <a href="produtos.html" target="_blank">Produtos</a>
-                    <a href="politica.html" target="_blank">Política de privacidade</a>
-                    <a id="ultimo-a" href="suporte.html" target="_blank">Suporte</a>
+                    <a href="institucional.html" target="_self">Institucional</a>
+                    <a href="produtos.html" target="_self">Produtos</a>
+                    <a href="politica.html" target="_self">Política de privacidade</a>
+                    <a id="ultimo-a" href="suporte.html" target="_self">Suporte</a>
                 </div>
 
                 <div class="formas-de-pagamento">
@@ -105,8 +105,8 @@
 
                 <h3>Fale Conosco</h3>
                 <div class="redesocial">
-                    <img src="images/instagram-icon.png" alt="ícone logo instagram">
-                    <img src="images/whatsapp_-icon.png" alt="ícone logo whatsapp">
+                    <a href="https://www.instagram.com/menorpreco.autopecas/" target="_blank"><img src="images/instagram-icon.png" alt="ícone logo instagram"></a>
+                    <a href="https://l.instagram.com/?u=https%3A%2F%2Fwa.link%2F5vr51r%3Ffbclid%3DPAZXh0bgNhZW0CMTEAAaeLaN7EDOS6aXnsslkIlEKRVL9EGbdE64Xy20w-wjEqQ5aJvkz0cta4bK7AOA_aem_bobHZaMfp4J0BE82mhN7gA&e=AT0fW7wLlXKhu9dwj4EBQkfGfbgtV76kQAfFbdLay3ElXciEFLY0vwBC0H_BFjawBd-IsnrViY1jORfmySY6Qxef09Z4m93H_KjTtg" target="_blank"><img src="images/whatsapp_-icon.png" alt="ícone logo whatsapp"></a>
                 </div>
 
             </div>
