--- a/index.html
+++ b/index.html
@@ -27,10 +27,11 @@
 
 
             <nav class="actions">
-                <a href="">Produtos</a>
-                <a href="#ultimo-a">Suporte</a>
-                <a href="">Contato</a>
-
+                <a href="produtos.html">Produtos</a>
+                <a href="suporte.html">Suporte</a>
+                <a href="#contato">Contato</a>
+        </nav>
+        
             <nav class="menu">
                 <ul class="opcoes">                    
                     <a href="produtos.html"><li>Produtos</li></a>
