att-commit-ButtonDark-1.3

--- a/index.html
+++ b/index.html
@@ -31,12 +31,13 @@
                 <a href="suporte.html">Suporte</a>
                 <a href="#contato">Contato</a>
         </nav>
-        
+
             <nav class="menu">
                 <ul class="opcoes">                    
                     <a href="produtos.html"><li>Produtos</li></a>
                     <a href="suporte.html"><li>Suporte</li></a>
                     <a href="#contato"><li>Contato</li></a>
+                    <button class="MudarModo">Modo Escuro/Claro</button>
                 </ul>
 
             </nav>
