--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
                 <h1 class="textos">SOLUÇÕES COMPLETAS PARA SEU  VEÍCULO</h1>
                 <h1 id="texto-especial" class="textos">ACELERE COM DESEMPENHO E SEGURANÇA.</h1>
             </div>
+        <div class="main-img-text">
 
             <img id="img-mecanico" src="images/img-mecanico.png" alt="imagem de um mecânico">
 
             <div class="main-text">
-
                 <p>
                     Está buscando peças confiáveis para seu motor?
                     Você chegou ao lugar certo!
@@ -64,8 +64,10 @@
                     Com foco em inovação e excelência, garantimos que cada componente atenda os mais altos padrões de
                     exigência.
                 </p>
-
             </div>
+
+        </div>
+        
     <div class="local-form">
             <div class="localizacao">
 
