--- a/suporte.html
+++ b/suporte.html
@@ -19,10 +19,11 @@
 
     <h1>Como posso te ajudar?</h1>
 
-    <div class="divs">
+    <div class="divs-suporte">
         <p>
             Nossa equipe está pronta para atender às suas necessidades e dúvidas.
         </p>
+        <br>
         <br>
         <a id="btn-fale-conosco" href="http://whatsapp.me">FALE CONOSCO 
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-whatsapp" viewBox="0 0 16 16">
@@ -35,13 +36,14 @@
         <form action="">
 
             <h2>Dúvidas:</h2>
+            <p>Envie-nos um Email</p>
             <label for="nome">Nome completo: </label>
             <input type="text" name="nome" id="nome" placeholder="    Ex: Marcos silva" required>
 
             <label for="email">E-mail: </label>
             <input type="email" name="email" id="email" placeholder="    Seu melhor E-mail" required>
 
-            <label for="assunnto">Motivo do contato: </label>
+            <label for="assunnto">Mensagem: </label>
             <input type="text" name="motivo" id="motivo" required placeholder="   Conte-nos o motivo de seu contato">
 
             <button class="botao-enviar">Enviar</button>
