--- a/institucional.html
+++ b/institucional.html
@@ -8,10 +8,17 @@
     <link rel="stylesheet" href="secundary.css">
 </head>
 <body>
-    <button id="botao-voltar-para-main"><a href="index.html" target="_self">voltar</a></button>
+    <button id="botao-voltar-para-main">
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-left-short" viewBox="0 0 16 16">
+            <path fill-rule="evenodd" d="M12 8a.5.5 0 0 1-.5.5H5.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5H11.5a.5.5 0 0 1 .5.5"/>
+          </svg>
+
+        <a href="index.html" target="_self">voltar</a>
+    </button>
 
     <h1>Sobre a Menor Preço</h1>
     <div class="divs">
+        <img class="foto-endereço"  src="images/foto-endereço.jpg" alt="frente da loja">
         <p>
             A Menor Preço nasceu com um objetivo claro: oferecer peças automotivas de qualidade com valores acessíveis para todos os tipos de clientes, desde o motorista comum até oficinas e profissionais da área. Entendemos que manter um veículo em boas condições não deve ser um privilégio, e sim uma necessidade acessível.
             <br> <br>
