--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <title>MenorAutoPeças</title>
     <link rel="stylesheet" href="index.css">
     <link rel="shortcut icon" href="images/icone-empresa.ico" type="image/x-icon">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+   
 </head>
 
 <body>
@@ -18,7 +19,7 @@
         <header class="header">
 
             <div class="logo">
-                <img id="logo-site" class="mainicon" src="images/Menor_Preço-logo.png" alt="">
+                <img id="logo-site" class="mainicon" src="images/Menor_Preço-logo.png" alt="Logo da Menor Preço Auto Peças">
             </div>
 
             <div class="menu-toggle">
@@ -37,11 +38,11 @@
                     <a href="produtos.html"><li>Produtos</li></a>
                     <a href="suporte.html"><li>Suporte</li></a>
                     <a href="#contato"><li>Contato</li></a>
-                    <button class="MudarModo">Modo Escuro/Claro</button>
+                    <button class="MudarModo"><i class="fa-solid fa-circle-half-stroke"></i></button>
                 </ul>
 
             </nav>
-            <button class="MudarModo">Modo Escuro/Claro</button>
+            <button class="MudarModo"><i class="fa-solid fa-circle-half-stroke"></i></button>
 
         </header>
         <!-- Main -->
@@ -89,7 +90,6 @@
                     <input type="text" name="nome" id="nome-in" placeholder="  Ex: Marcelo Santos Silva" required>
                     <label for="email">E-mail:</label>
                     <input type="email" name="email" id="user-email-in" placeholder="  Seu melhor E-mail" required>
-
                     <button class="botao-enviar">Enviar</button>
                 </form>
 
