--- a/index.html
+++ b/index.html
@@ -89,6 +89,12 @@
                     <input type="text" name="nome" id="nome-in" placeholder="  Ex: Marcelo Santos Silva" required>
                     <label for="email">E-mail:</label>
                     <input type="email" name="email" id="user-email-in" placeholder="  Seu melhor E-mail" required>
+                    <label for="Usuario">Usuário:</label>
+                    <input type="usuario" name="usuario" id="usuario-in" placeholder="  Ex: Marcelo123" required>
+                    <label for="senha">Senha:</label>
+                    <input type="senha" name="senha" id="senha-in" placeholder="  Ex: Senha de 8 dígitos" required>
+                    <label for="rpt senha"> Repita senha:</label>
+                    <input type="rpt senha" name="rpt senha" id="rpt senha-in" placeholder="  Ex: Digite a senha novamente" required>
 
                     <button class="botao-enviar">Enviar</button>
                 </form>
