--- a/produtos.html
+++ b/produtos.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Produtos</title>
     <link rel="shortcut icon" href="images/icone-empresa.ico" type="image/x-icon">
-    <link rel="stylesheet" href="secundary.css">
+    <link rel="stylesheet" href="prod.css">
 </head>
 <body>
     <button id="botao-voltar-para-main">
@@ -15,5 +15,72 @@
 
         <a href="index.html" target="_self">voltar</a>
     </button>
+    <section>
+        <section class="divs">
+            <h1>Produtos</h1>
+            <p>
+                A Menor Preço oferece uma ampla gama de peças automotivas para atender às necessidades de todos os tipos de veículos. Nossos produtos são selecionados com rigor, garantindo qualidade e confiabilidade. Confira algumas das categorias disponíveis:
+            </p>
+        </section>
+        <section>
+            <div class="todos-produtos">
+                <!--Produto 1-->
+                <div class="produto">
+                    <img src="images/produto-1.webp" alt="kit oleo motrio 10w40">
+                    <div>
+                        <h2>Kit Oleo Motrio 10w40</h2>
+                        <p>Kit Oleo Motrio 10w40, 6 unidades, 1 litro. </p>
+                    </div>
+                    <button class="botao-comprar">Comprar</button>
+                </div>
+                <!--produto-2-->                
+                <div class="produto">
+                    <img src="images/produto-2.webp" alt="vela de iginição">
+                    <div>
+                        <h2>Vela de Iginição</h2>
+                        <p>O Jogo de Vela para Veículos a Gasolina 8 Válvulas, marca NGK.</p>
+                    </div>
+                    <button class="botao-comprar">Comprar</button>
+                </div>
+                <!--produto-3-->
+                <div class="produto">
+                    <img src="images/produto-3.webp" alt="Kit de Embreagem">
+                    <div>
+                        <h2>Kit de Embreagem</h2>
+                        <p>1 Kit de Embreagem (Plato + Disco + Rolamento)</p>
+                    </div>
+                    <button class="botao-comprar">Comprar</button>
+                </div>
+                <!--produto-4-->
+                <div class="produto">
+                    <img src="images/produto-4.webp" alt="Amortecedor">
+                    <div>
+                        <h2>Anel de segmento</h2>
+                        <p>Jogo completo composto por: Anéis de Compressão, Anéis Raspador, Anéis de Óleo</p>
+                    </div>
+                    <button class="botao-comprar">Comprar</button>
+                </div>
+                <!--produto-5-->
+                <div class="produto">
+                    <img src="images/produto-5.webp" alt="Amortecedor">
+                    <div>
+                        <h2>Cubo de Roda</h2>
+                        <p>Cubo de roda dianteira forjado, com furo, rolamento e dentes.</p>
+                    </div>
+                        <button class="botao-comprar">Comprar</button>
+                </div>
+                <!--produto-6-->
+                <div class="produto">
+                    <img src="images/produto-6.webp" alt="Amortecedor">
+                    <div>
+                        <h2>Amortecedor Dianteiro</h2>
+                        <p>Uma peça crucial no sistema de suspensão de um veículo</p>
+                    </div>
+                        <button class="botao-comprar">Comprar</button>
+                </div>
+
+            </div>
+        </section>
+    </section>
 </body>
 </html>
