--- a/produtos.html
+++ b/produtos.html
@@ -74,7 +74,7 @@
                     <img src="images/produto-6.webp" alt="Amortecedor">
                     <div>
                         <h2>Amortecedor Dianteiro</h2>
-                        <p>Uma peça crucial no sistema de suspensão de um veículo</p>
+                        <p>uma peça crucial no sistema de suspensão de um veículo</p>
                     </div>
                         <button class="botao-comprar">Comprar</button>
                 </div>
