--- a/produtos.html
+++ b/produtos.html
@@ -20,91 +20,91 @@
             <div class="todos-produtos">
                 <!--Produto 1-->
                 <div class="produto">
-                    <img src="images/produto-imagem-rafaela.jpg" alt="Amortecedor">
+                    <img src="images/amortecedor.jpg" alt="Amortecedor">
                     <div>
                         <h2>Amortecedor</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <p>R$ 279,93</p>
                     </div>
                     <button class="botao-comprar">Comprar</button>
                 </div>
                 <!--produto-2-->                
                 <div class="produto">
-                    <img src="images/produto-imagem-rafaela.jpg" alt="Amortecedor">
+                    <img src="images/kit_de_embreagem.jpg" alt="Kit-de-Embreagem">
                     <div>
-                        <h2>Amortecedor</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <h2>Kit de Embreagem</h2>
+                        <p>R$ 302,00</p>
                     </div>
                     <button class="botao-comprar">Comprar</button>
                 </div>
                 <!--produto-3-->
                 <div class="produto">
-                    <img src="images/produto-imagem-rafaela.jpg" alt="Amortecedor">
+                    <img src="images/vela_de_ignição.jpg" alt="Vela-de-Ignição">
                     <div>
-                        <h2>Amortecedor</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <h2>Vela de Ignição</h2>
+                        <p>R$ 44,50</p>
                     </div>
                     <button class="botao-comprar">Comprar</button>
                 </div>
                 <!--produto-4-->
                 <div class="produto">
-                    <img src="images/produto-imagem-rafaela.jpg" alt="Amortecedor">
+                    <img src="images/pistao_do_motor.jpg" alt="Pistão-do-Motor">
                     <div>
-                        <h2>Amortecedor</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <h2>Pistão do Motor</h2>
+                        <p>R$ 206,50</p>
                     </div>
                     <button class="botao-comprar">Comprar</button>
                 </div>
                 <!--produto-5-->
                 <div class="produto">
-                    <img src="images/produto-imagem-rafaela.jpg" alt="Amortecedor">
+                    <img src="images/anel_segmento.avif" alt="Anel-de-Segmenta">
                     <div>
-                        <h2>Amortecedor</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <h2>Anel de Segmenta</h2>
+                        <p>R$ 185,00</p>
                     </div>
                         <button class="botao-comprar">Comprar</button>
                 </div>
                 <!--produto-6-->
                 <div class="produto">
-                    <img src="images/produto-imagem-rafaela.jpg" alt="Amortecedor">
+                    <img src="images/junta_cabeçote.jpg" alt="Junta-do-Cabeçote">
                     <div>
-                        <h2>Amortecedor</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <h2>Junta do Cabeçote</h2>
+                        <p>103,00</p>
                     </div>
                         <button class="botao-comprar">Comprar</button>
                 </div>
                 <!--produto-7-->
                 <div class="produto">
-                    <img src="images/produto-imagem-rafaela.jpg" alt="Amortecedor">
+                    <img src="images/Bomba_dagua.avif" alt="Bomba d'água">
                     <div>
-                        <h2>Amortecedor</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <h2>Bomba d'água</h2>
+                        <p>R$ 110,00</p>
                     </div>
                     <button class="botao-comprar">Comprar</button>
                 </div>
                 <!--produto-8-->
                 <div class="produto">
-                    <img src="images/produto-imagem-rafaela.jpg" alt="Amortecedor">
+                    <img src="images/Mangueira_de_respiração.jpg" alt="Mangueira">
                     <div>
-                        <h2>Amortecedor</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <h2>Mangueira Respiro do Óleo</h2>
+                        <p>R$ 43,00</p>
                     </div>
                     <button class="botao-comprar">Comprar</button>
                 </div>
                 <!--produto-9-->
                 <div class="produto">
-                    <img src="images/produto-imagem-rafaela.jpg" alt="Amortecedor">
+                    <img src="images/Barra_axial.jpg" alt="Barra-Axial">
                     <div>
-                        <h2>Amortecedor</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <h2>Barra Axial</h2>
+                        <p>R$ 51,18</p>
                     </div>
                     <button class="botao-comprar">Comprar</button>
                 </div>
                 <!--produto-10-->
                 <div class="produto">
-                    <img src="images/produto-imagem-rafaela.jpg" alt="Amortecedor">
+                    <img src="images/cubo_rodas.jpg" alt="Cubo-rodas">
                     <div>
-                        <h2>Amortecedor</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <h2>Cubo de Rodas</h2>
+                        <p>R$ 87,00</p>
                     </div>
                         <button class="botao-comprar">Comprar</button>
                 </div>
