--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <title>MenorAutoPeças</title>
     <link rel="stylesheet" href="index.css">
     <link rel="shortcut icon" href="images/icone-empresa.ico" type="image/x-icon">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+   
 </head>
 
 <body>
@@ -18,7 +19,7 @@
         <header class="header">
 
             <div class="logo">
-                <img id="logo-site" class="mainicon" src="images/Menor_Preço-logo.png" alt="">
+                <img id="logo-site" class="mainicon" src="images/Menor_Preço-logo.png" alt="Logo da Menor Preço Auto Peças">
             </div>
 
             <div class="menu-toggle">
@@ -27,12 +28,6 @@
 
 
             <nav class="actions">
-<<<<<<< HEAD
-                <a href="produtos.html"><li>Produtos</li></a>
-                <a href="suporte.html"><li>Suporte</li></a>
-                <a href="#contato"><li>Contato</li></a>
-                <button class="MudarModo">Modo Escuro/Claro</button>
-=======
                 <a href="produtos.html">Produtos</a>
                 <a href="suporte.html">Suporte</a>
                 <a href="#contato">Contato</a>
@@ -43,12 +38,11 @@
                     <a href="produtos.html"><li>Produtos</li></a>
                     <a href="suporte.html"><li>Suporte</li></a>
                     <a href="#contato"><li>Contato</li></a>
-                    <button class="MudarModo">Modo Escuro/Claro</button>
+                    <button class="MudarModo"><i class="fa-solid fa-circle-half-stroke"></i></button>
                 </ul>
 
             </nav>
-            <button class="MudarModo">Modo Escuro/Claro</button>
->>>>>>> parent of e81f973 (Update darkmode and Html/css)
+            <button class="MudarModo"><i class="fa-solid fa-circle-half-stroke"></i></button>
 
         </header>
         <!-- Main -->
@@ -58,11 +52,11 @@
                 <h1 class="textos">SOLUÇÕES COMPLETAS PARA SEU  VEÍCULO</h1>
                 <h1 id="texto-especial" class="textos">ACELERE COM DESEMPENHO E SEGURANÇA.</h1>
             </div>
+        <div class="main-img-text">
 
             <img id="img-mecanico" src="images/img-mecanico.png" alt="imagem de um mecânico">
 
             <div class="main-text">
-
                 <p>
                     Está buscando peças confiáveis para seu motor?
                     Você chegou ao lugar certo!
@@ -71,8 +65,10 @@
                     Com foco em inovação e excelência, garantimos que cada componente atenda os mais altos padrões de
                     exigência.
                 </p>
-
             </div>
+
+        </div>
+
     <div class="local-form">
             <div class="localizacao">
 
@@ -88,13 +84,12 @@
             <fieldset class="form-cadastro">
 
                 <h2>Cadastro/login</h2>
-                
+
                 <form method="post" action="">
                     <label for="nome">Nome completo:</label>
                     <input type="text" name="nome" id="nome-in" placeholder="  Ex: Marcelo Santos Silva" required>
                     <label for="email">E-mail:</label>
                     <input type="email" name="email" id="user-email-in" placeholder="  Seu melhor E-mail" required>
-
                     <button class="botao-enviar">Enviar</button>
                 </form>
 
@@ -126,12 +121,6 @@
                 <div class="redesocial">
                     <a href="https://www.instagram.com/menorpreco.autopecas/" target="_blank"><img src="images/instagram-icon.png" alt="ícone logo instagram"></a>
                     <a href="https://l.instagram.com/?u=https%3A%2F%2Fwa.link%2F5vr51r%3Ffbclid%3DPAZXh0bgNhZW0CMTEAAaeLaN7EDOS6aXnsslkIlEKRVL9EGbdE64Xy20w-wjEqQ5aJvkz0cta4bK7AOA_aem_bobHZaMfp4J0BE82mhN7gA&e=AT0fW7wLlXKhu9dwj4EBQkfGfbgtV76kQAfFbdLay3ElXciEFLY0vwBC0H_BFjawBd-IsnrViY1jORfmySY6Qxef09Z4m93H_KjTtg" target="_blank"><img src="images/whatsapp_-icon.png" alt="ícone logo whatsapp"></a>
-=======
-                <div id="contato" class="redesocial">
-                    <img src="images/instagram-icon.png" alt="ícone logo instagram">
-                    <img src="images/whatsapp_-icon.png" alt="ícone logo whatsapp">
-                </div>
-
             </div>
         </footer>
     </div>
