--- a/institucional.html
+++ b/institucional.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="secundary.css">
 </head>
 <body>
-    <button id="botao-voltar-para-main"><a href="index.html" target="_self">VOLTAR</a></button>
+    <button id="botao-voltar-para-main"><a href="index.html" target="_self">voltar</a></button>
 
     <h1>Sobre a Menor Preço</h1>
     <div class="divs">
