--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <img id="logo-site" class="mainicon" src="images/Menor_Preço-logo.png" alt="Logo da Menor Preço Auto Peças">
             </div>
 
-            <div class="menu-toggle">
+            <div class="menu-toggle" >
                 <i id="menu-icon" class="fas fa-bars"></i>
             </div>
 
@@ -54,7 +54,7 @@
             </div>
         <div class="main-img-text">
 
-            <img id="img-mecanico" src="images/img-mecanico.png" alt="imagem de um mecânico">
+            <img id="img-mecanico" src="images/mecanico-2.png" alt="imagem de um mecânico">
 
             <div class="main-text">
                 <p>
