--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
 
         <!-- Footer -->
-        <footer>
+        <footer id="contato">
             <div class="icons-social">
 
                 <div class="info-footer">
