--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <ul class="opcoes">                    
                     <a href="produtos.html"><li>Produtos</li></a>
                     <a href="suporte.html"><li>Suporte</li></a>
-                    <a href="#contato"><li>Contato</li></a>
+                    <a href="#"><li>Contato</li></a>
                     <button class="MudarModo"><i class="fa-solid fa-circle-half-stroke"></i></button>
                 </ul>
 
@@ -108,7 +108,7 @@
 
 
         <!-- Footer -->
-        <footer id="contato">
+        <footer>
             <div class="icons-social">
 
                 <div class="info-footer">
